--- a/uploads/templates/about.html
+++ b/uploads/templates/about.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>About</h1>
+    <h1><font face="Corsiva"><font color="white"><font size = "7">O nas</font></h1>
 
-    <p>Example information</p>
+    <p><font color="white"><font face="Cursive"><font size = "5"><b>Natalia</b></font>
+      <font color="white"><font face="Cursive"><font size = "4">jest człowiekiem orkiestrą –
+      śpiewa, gra na gitarze, ukulele i pianinie <br>
+       oraz kocha i hoduje zwierzęta (kota i trzy świnki morskie). </font><br>  <br>
+      <p><font color="white"><font face="Cursive"><font size = "5"><b>Oliwia</b></font>
+        <font color="white"><font face="Cursive"><font size = "4">oprócz kognitywistyki studiuje jeszcze filmoznawstwo, więc w chwilach, <br>
+       gdy nie jest na uczelni, próbuje nadrabiać filmowe zaległości <br>
+       oraz wciąż stara się wybrać na jeden z koncertów Natalii… :)</font></p>
 {% endblock %}
