--- a/uploads/templates/contact.html
+++ b/uploads/templates/contact.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>About</h1>
+    <h1><font face="Corsiva"><font color="white"><font size = "7">Jak się z nami skontaktować?</font></h1>
 
-    <p>Example information</p>
+    <p><font face="Cursive"><font color="white"><font size = "4">Jeśli chcesz nas o coś zapytać lub pogratulować i powiedzieć, <br>
+       że nasza strona zmieniła Twoje życie na lepsze – możesz napisać do nas e-maila :) <br> <br></font>
+       <b><font face="Cursive"><font color="white"><font size = "5">Natalia:</b>
+       <font face="Corsiva"><font color="white"><font size = "5">natalias8@tlen.pl <br>
+       <b><font face="Cursive"><font color="white"><font size = "5">Oliwia:</b>
+       <font face="Corsiva"><font color="white"><font size = "5">oliwia_m@onet.eu</font></p>
 {% endblock %}
