--- a/uploads/templates/home.html
+++ b/uploads/templates/home.html
@@ -1,7 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>About</h1>
+    <h1><font face="Corsiva"><font color="white"><font size = "7">Kalkulator kalorii sałatek</font></h1>
 
-    <p>Example information</p>
+    <p><font face="Cursive"><font color="white"><font size = "5"><b>Witamy serdecznie na stronie głównej kalkulatora kalorii w sałatkach.</b></font>
+       <br> <br>
+       Nasza strona umożliwi Ci obliczenie zawartości energetycznej Twojej
+       sałatki w szybki i łatwy sposób, <br> jeśli tylko wiesz, z jakich
+       składników została przyrządzona Twoja sałatka oraz jak dużo danego
+       produktu <br> zostało do niej dodane (w gramach). <br><br>
+
+       Jeśli znalazłeś się na naszej stronie to prawdopodobnie musisz
+       kontrolować spożywane kalorie ze względów <br> zdrowotnych lub z powodu
+       diety. <br><br> Stworzyłyśmy kalkulator kalorii ze składnikami
+       najczęściej wykorzystywanymi w sałatkach, <br> ponieważ jedząc tłuste
+       i kaloryczne jedzenie prawie każdy zastanawia się nad tym,
+       ile kalorii pochłonął <br> i potrafi dostrzec moment, w którym powinien
+       zaprzestać zjadania kolejnych kęsów kalorycznego dania. <br> W przypadku
+       warzyw i owoców łatwiej jest przesadzić, gdyż jedząc to,
+       co uważamy za zdrowe, <br> wyłączamy samokontrolę, co często jest dużym błędem,
+       gdyż w niektórych owocach i warzywach <br> jest bardzo dużo cukrów,
+       z którymi łatwo jest przesadzić, wcale tego nie czując. <br><br>
+       Oddajemy więc do Waszej dyspozycji kalkulator kalorii w sałatkach, <br>
+       z nadzieją, że pomoże on Wam zachować zdrowie i witalność,
+       a także cieszyć się pysznymi, <br> zdrowymi i kolorowymi sałatkami, które
+       będą mogły prosto z talerza trafiać <br> do Waszych szczęśliwych brzuszków oraz na Instagrama
+       z hasztagiem #healthylife :)</font></p>
 {% endblock %}
