--- a/uploads/templates/base.html
+++ b/uploads/templates/base.html
@@ -3,16 +3,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Analysis</title>
+    <title>Kalorie sałatki</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
   </head>
   <body>
     <header>
       <nav>
           <ul>
-              <li><a href="{% url 'home' %}">Home</a></li>
-              <li><a href="{% url 'data_analysis' %}">Data analysis</a></li>
-              <li><a href="{% url 'about' %}">O nas</a></li>
+              <li><a href="{% url 'home' %}"<font color="white"><font face="Cursive"><font size = "4">Strona główna</font></a></li>
+              <li><a href="{% url 'data_analysis' %}">Oblicz kalorie</a></li>
+              <li><a href="{% url 'about' %}">O autorkach</a></li>
               <li><a href="{% url 'contact' %}">Kontakt</a></li>
           </ul>
       </nav>
